12-kube-2.3/nginx-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: busybox-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
          - name: nginx-config-volume
            mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
