12-kube-2.3/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
          - name: nginx-config-volume
            mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-conf
